# llm-cli-tools-core

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  HANDOFF-v0.2.0.md  README.md  ROADMAP-v0.2.0.md  cspell.config.yaml  justfile  lychee.toml  pyproject.toml
.claude/: settings.json
.claude/agents/: gt-restack-expert.md
.claude/commands/: commit.md  ground-truth.md  pr-analyze-comments.md  pr-deep-review.md  pr-request-review.md
.claude/hooks/: lint-on-save.sh  update-search-year.sh
.docs-templates/: architecture-template.md  cli-reference-template.md  contributor-guide-template.md  how-to-template.md  overview-template.md  policy-template.md
.github/: claude-costs.json
.github/workflows/: ci.yml  claude.yml  codex-review.yml  docs-quality.yml  notify-slack.yml  release.yml  slack-message.yml
docs/: WORKFLOW.md  index.md
docs/claude-components/: deployment-gt-workflow.md
docs/development/: claude-commands.md  claude-context-management.md  claude-hooks-setup.md  github-app-integration.md
docs/releases/: v0.2.0.md
docs/workflows/: claude-multi-focus-review.md  claude-review-workflows.md
scripts/: docs_phase2.sh
scripts/helpers/: claude_metrics.py
src/llm_cli_core/: __init__.py  cli.py
src/llm_cli_core/analytics/: __init__.py  costs.py
src/llm_cli_core/config/: __init__.py  settings.py
src/llm_cli_core/models/: pricing.py
src/llm_cli_core/providers/: __init__.py
src/llm_cli_core/storage/: __init__.py  base.py  local.py  readers.py
src/llm_cli_core/telemetry/: __init__.py  core.py
tests/: conftest.py
tests/unit/: test_analytics_costs.py  test_cli.py  test_pricing.py  test_storage.py  test_telemetry.py
